--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 05 09:25:25 CEST 2019
-sdk.dir=/home/maxine/Android/Sdk
+#Fri May 10 09:30:59 CEST 2019
+sdk.dir=/opt/Sdk
